tg-7514 [FE] Mostrar conexión anterior en la primer pantalla

--- a/front-end/apps/projects/hospital/src/app/modules/home/routes/instituciones/instituciones.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/home/routes/instituciones/instituciones.component.html
@@ -46,5 +46,9 @@
 				</mat-list-item>
 			</mat-action-list>
 		</mat-card>
+		<div class="space"></div>
+		<div class="previous-login" *ngIf="enabledPreviousLogin">
+			<span>{{'home.instituciones.PREVIOUS_LOGIN' | translate}}: </span>{{previousLogin | date: 'short'}}
+		</div>
 	</ng-container>
 </app-content>
