tg-1717 [P1] Se puedo generar un segundo documento sobre la misma consulta en internación

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/anamnesis-dock-popup/anamnesis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/anamnesis-dock-popup/anamnesis-dock-popup.component.html
@@ -208,7 +208,7 @@
 	</form>
 	<div actions id="buttons" align="end">
 		<button id="sign-confirm" mat-raised-button type="submit" color="primary"
-			*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']" (click)="save()">
+			*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']" (click)="save()" [disabled]="isDisableConfirmButton">
 			<span class="uppercase" [translate]="'internaciones.anamnesis.buttons.CONFIRM'"></span>
 		</button>
 	</div>
