--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
@@ -319,18 +319,18 @@
 
 	<div actions id="buttons" fxLayoutGap="10px" fxLayoutAlign="end">
 			<button id="sign-draft" type="button"  mat-stroked-button color="primary"
-				*appHasRole="['ESPECIALISTA_MEDICO']" (click)="saveDraft()">
+				*appHasRole="['ESPECIALISTA_MEDICO']" (click)="saveDraft()" [disabled]="isDisableConfirmButton">
 			<span class="uppercase" [translate]="'internaciones.epicrisis.buttons.SAVE_DRAFT'"></span>
 			</button>
 		<div *ngIf="!isDraft">
-			<button id="sign-confirm" type="button" mat-raised-button color="primary"
+			<button [disabled]="isDisableConfirmButton" id="sign-confirm" type="button" mat-raised-button color="primary"
 					*appHasRole="['ESPECIALISTA_MEDICO']" (click)="save()">
 				<span class="uppercase" [translate]="'internaciones.epicrisis.buttons.CONFIRM'"></span>
 			</button>
 		</div>
 		<div *ngIf="isDraft && canConfirmedDocument">
 			<button id="sign-confirm-draft" type="button" mat-raised-button color="primary"
-					*appHasRole="['ESPECIALISTA_MEDICO']" (click)="saveConfirmedDraft()">
+					*appHasRole="['ESPECIALISTA_MEDICO']" (click)="saveConfirmedDraft()" [disabled]="isDisableConfirmButton">
 				<span class="uppercase"  [translate]="'internaciones.epicrisis.buttons.FINALIZE'"></span>
 			</button>
 		</div>
