--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../../../../assets/styles/mat-mixins.scss';
+
 ::ng-deep .cdk-overlay-pane {
 	app-odontology-consultation-dock-popup {
 		width: 100%;
@@ -32,13 +34,13 @@ span {
 }
 
 .form_dental_pieces {
+	@include mat-form-field-background-white;
+
 	.mat-form-field {
 		width: 80%;
-		margin-top: 10px;
 
 		::ng-deep .mat-form-field-wrapper {
-			background-color: white;
-			height: 38px;
+			padding-bottom: 0;
 		}
 	}
 }
