--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.scss
@@ -50,17 +50,6 @@ span {
 	font-size: 14px;
 }
 
-.reference {
-
-	font-family: Roboto, "Helvetica Neue", sans-serif;
-
-	span {
-		font-size: 16px;
-		font-weight: 500;
-		cursor: pointer;
-	}
-
-	span:hover {
-		text-decoration: underline;
-	}
+.add-button {
+	font-size: 16px;
 }
